# Squre

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TUTORIAL.md
crates/squre/: Cargo.toml
crates/squre-cli/: Cargo.toml
crates/squre-cli/src/: main.rs  polymorphic_stub.rs  source_transform.rs
crates/squre-cli/src/pe/: parser.rs  writer.rs
crates/squre-cli/src/transform/: hardening.rs  honeypot.rs  import_obfuscate.rs  metamorphic.rs  mod.rs  scattered_init.rs  section_encrypt.rs  vm_protect.rs
crates/squre-core/: Cargo.toml
crates/squre-core/src/: lib.rs
crates/squre-core/src/crypto/: mod.rs  opaque_predicates.rs  shamir.rs  white_box.rs  xor_cipher.rs  xtea.rs
crates/squre-core/src/edf/: affine.rs
crates/squre-core/src/integrity/: cascade.rs
crates/squre-core/src/junk/: semantic.rs
crates/squre-core/src/mba/: constant.rs  galois.rs  linear.rs  mod.rs
crates/squre-core/src/vm/: compiler.rs  handler.rs  mod.rs  opcode.rs
crates/squre-macro/: Cargo.toml
crates/squre-macro/src/: anti_debug.rs  cff.rs  codegen.rs  encrypt_string.rs  lib.rs  obfuscate_const.rs  obfuscate_fn.rs  virtualize.rs  vm_protect.rs
crates/squre-runtime/: Cargo.toml
crates/squre-runtime/src/: anti_debug.rs  decrypt.rs  lib.rs  nanomite.rs  opaque.rs  polymorph.rs  process_guard.rs  syscall.rs  tidal.rs  vm_interp.rs
crates/squre/src/: lib.rs
crates/squre/tests/: cff_tests.rs  virtualize_tests.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/full_protection/: Cargo.toml
examples/full_protection/src/: main.rs
